[gd_scene load_steps=18 format=2]

[ext_resource path="res://NPC/NPC_MotionRoot.gd" type="Script" id=1]
[ext_resource path="res://NPC/NPC_ShadowAreaCheck.gd" type="Script" id=2]
[ext_resource path="res://Enemies/PlayerDetection.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Collision/CollidableBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Objects/EnemyTest.gd" type="Script" id=5]
[ext_resource path="res://Assets/General/Shadows/circle shadow small.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Rendering/DepthTestCharacterSprite.gd" type="Script" id=7]
[ext_resource path="res://Areas/Cherry Trail/Cherry Trail BA 1.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/Cherry Trail/Cheribo/Cheribo.png" type="Texture" id=9]
[ext_resource path="res://Enemies/BattleTrigger.tscn" type="PackedScene" id=10]

[sub_resource type="CapsuleShape2D" id=175]

[sub_resource type="CircleShape2D" id=172]
radius = 1.0

[sub_resource type="Animation" id=173]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BodyVisualRoot/Enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ShadowYSort/ShadowVisualRoot/ShadowCircle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, -1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyVisualRoot/Enemy:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, -24 ) ]
}

[sub_resource type="Animation" id=176]
resource_name = "walk_back"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyVisualRoot/Enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyVisualRoot/Enemy:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 3, -24 ), Vector2( 3, -24 ), Vector2( 3, -23 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../ShadowYSort/ShadowVisualRoot/ShadowCircle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.350449 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 0 ), Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=177]
resource_name = "walk_front"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyVisualRoot/Enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ShadowYSort/ShadowVisualRoot/ShadowCircle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, -1 ), Vector2( 2, -1 ) ]
}

[sub_resource type="CircleShape2D" id=178]
radius = 81.0062

[sub_resource type="CircleShape2D" id=179]

[node name="Enemy" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 5 )
target_scene = ExtResource( 8 )

[node name="MotionRoot" type="KinematicBody2D" parent="."]
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MotionRoot"]
position = Vector2( 2, -3 )
scale = Vector2( 1.42294, 0.314577 )
shape = SubResource( 175 )
disabled = true

[node name="ShadowAreaCheck" type="Area2D" parent="MotionRoot"]
script = ExtResource( 2 )

[node name="ShadowCheck" type="CollisionShape2D" parent="MotionRoot/ShadowAreaCheck"]
shape = SubResource( 172 )

[node name="ShadowYSort" type="Node2D" parent="."]

[node name="ShadowVisualRoot" type="Node2D" parent="ShadowYSort"]

[node name="ShadowCircle" type="Sprite" parent="ShadowYSort/ShadowVisualRoot"]
position = Vector2( 2, -1 )
scale = Vector2( 0.914288, 0.918545 )
texture = ExtResource( 6 )
script = ExtResource( 7 )
alpha_clip = 0.01
depth_test_offset = Vector2( 0, -30 )
use_dithering = false
use_dither_blending = false

[node name="BodyYSort" type="Node2D" parent="."]

[node name="BodyVisualRoot" type="Node2D" parent="BodyYSort"]

[node name="Enemy" type="Sprite" parent="BodyYSort/BodyVisualRoot"]
modulate = Color( 0.972549, 0.988235, 1, 1 )
position = Vector2( 3, -24 )
texture = ExtResource( 9 )
hframes = 9
vframes = 3
script = ExtResource( 7 )
depth_test_offset = Vector2( -8, 28 )
feet_height = 10.0
use_dithering = false
use_dither_blending = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="BodyYSort"]
playback_speed = 0.4
anims/RESET = SubResource( 173 )
anims/walk_back = SubResource( 176 )
anims/walk_front = SubResource( 177 )

[node name="CollidableBox" parent="." instance=ExtResource( 4 )]
modulate = Color( 0.988235, 0.988235, 0.992157, 1 )
position = Vector2( 11, 5 )
tile_size = Vector2( 69, 22 )
grid_size = Vector2( 0.9, 0.5 )
texture_scale = Vector2( 1.15, 1.12 )
texture_offset = Vector2( 6, 13 )
height = 90.0
preview_collision_box = false
animation_hframes = 9
animation_vframes = 3
animation_frame = 6
use_transparency = true
always_update = true

[node name="PlayerDetection" parent="." instance=ExtResource( 3 )]
position = Vector2( 6, 12 )
scale = Vector2( 1.62956, 1.60333 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
modulate = Color( 1, 1, 1, 0.254902 )
position = Vector2( -1, -17 )
scale = Vector2( 0.927677, 0.881874 )
shape = SubResource( 178 )

[node name="BattleTrigger" parent="." instance=ExtResource( 10 )]
position = Vector2( 6, 2 )
scale = Vector2( 0.972756, 0.936889 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BattleTrigger"]
position = Vector2( -1.03548, -21.6421 )
scale = Vector2( 1.60839, -1.51859 )
shape = SubResource( 179 )
disabled = true

[connection signal="triggered" from="BattleTrigger" to="." method="_on_BattleTrigger_triggered"]
